@@ -1,3 +1,5 @@
+* Added Fixnum#ago/until, Fixnum#since/from_now #450 [bitsweat]
+
 * Added that Inflector now accepts Symbols and Classes by calling .to_s on the word supplied
 
 * Added time unit extensions to Fixnum that'll return the period in seconds, like 2.days + 4.hours.
